# cheetahs

./: Anchor.toml  LICENSE  README.md  package-lock.json  package.json
app/shared/: utils.ts
programs/peregrinus/: Cargo.toml
programs/peregrinus/src/: constants.rs  error.rs  lib.rs
programs/peregrinus/src/instructions/: management.rs  mod.rs  staking_pool.rs  tokens.rs  tokens2022.rs  utils.rs
programs/peregrinus/src/instructions/cnft/: add_tree.rs  mint_cnft.rs  mod.rs  set_and_verify_collection.rs
programs/peregrinus/src/state/: administrator.rs  cnft_config.rs  mod.rs  nft_config.rs  stake.rs
scripts/: create-cnft.ts  gen-idl.sh
tests/: test-cnft.ts  test-main.ts  test-nft.ts  test-sbt.ts
