[package]
name = "peregrinus"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "peregrinus"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["default", "metadata"] }
# for cNFT
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["cpi"] }
spl-concurrent-merkle-tree = { version = "0.2.0" }
#
